ドロワーボタン、transitionの追加を行いました。

--- a/開発用/src/assets/sass/component/_c-drawer-btn.scss
+++ b/開発用/src/assets/sass/component/_c-drawer-btn.scss
@@ -2,6 +2,7 @@
 
 .c-drawer-btn {
     background-color: #272727;
+    transition: all 0.3s ease 0s;
     width: 110px;
     height: 85px;
     position: fixed;
