--- a/開発用/src/assets/sass/component/_index.scss
+++ b/開発用/src/assets/sass/component/_index.scss
@@ -49,3 +49,5 @@
 @use "c-price__holiday-details";
 @use "c-price__note";
 @use "c-scroll__btn";
+@use "c-main__text--guest-room";
+@use "c-main-message--guest-room";
