--- a/開発用/src/assets/sass/component/_c-main-message.scss
+++ b/開発用/src/assets/sass/component/_c-main-message.scss
@@ -3,12 +3,19 @@
 .c-main-message {
     font-size: 15px;
     text-align: center;
-    line-height: calc( 34.545 / 15 );
+    line-height: calc(34.545 / 15);
     // letter-spacing: 1.95px;
     letter-spacing: 1.95px;
     padding-top: 120px;
     padding-bottom: 110px;
     font-family: global.$main-font;
+
+    @include global.mq('sp') {
+        padding-top: 2px;
+        width: 90%;
+        margin: 0 auto;
+        padding-bottom: 68px;
+    }
 }
 
 .c-main-message__text {
