--- a/開発用/src/assets/sass/component/_c-main__text--guest-room.scss
+++ b/開発用/src/assets/sass/component/_c-main__text--guest-room.scss
@@ -3,4 +3,9 @@
 .c-main__text--guest-room {
   padding-left: 2px;
   padding-top: 2px;
+  @include global.mq('sp') {
+    @include global.font(15, 400, 34.54, 0.9);
+    padding-top: 59px;
+    padding-bottom: 15px;
+  }
 }
