--- a/開発用/src/assets/sass/project/_p-check-io__contents.scss
+++ b/開発用/src/assets/sass/project/_p-check-io__contents.scss
@@ -6,5 +6,17 @@
   &:not(:first-child){
     max-width: 283px;
     width: 26.5%;
+    @include global.mq('sp') {
+      margin: 0 auto;
+      max-width: 300px;
+      padding-right: 3px;
+      padding-top: 20px;
+      width: 100%;
+    }
+  }
+  @include global.mq('sp') {
+    width: 100%;
+    margin: 0 auto;
+    max-width: 300px;
   }
 }
