--- a/開発用/src/assets/sass/project/_p-check-io__text.scss
+++ b/開発用/src/assets/sass/project/_p-check-io__text.scss
@@ -5,4 +5,9 @@ font-family: global.$main-font;
 color: global.$white-color;
 @include global.font(14, 400, 26.46, 1.68);
 text-align: left;
+@include global.mq('sp') {
+  @include global.font(15, 500, 28.35, 0.3);
+  text-align: center;
+  padding-left: 4px;
+}
 }
