--- a/開発用/src/assets/sass/project/_p-room.scss
+++ b/開発用/src/assets/sass/project/_p-room.scss
@@ -10,6 +10,9 @@
     &--reverse {
         flex-direction: row-reverse;
     }
+    @include global.mq('sp') {
+        flex-direction: column-reverse;
+    }
 }
 .p-room__imgs {
     display: grid;
