--- a/開発用/src/assets/sass/project/_p-room__imgs.scss
+++ b/開発用/src/assets/sass/project/_p-room__imgs.scss
@@ -6,4 +6,8 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 150px;
   width: min(55%, 580px);
+  @include global.mq('sp') {
+    display: block;
+    width: max(100%, 285px);
+  }
 }
