--- a/開発用/src/assets/sass/project/_p-room__sentence.scss
+++ b/開発用/src/assets/sass/project/_p-room__sentence.scss
@@ -7,4 +7,8 @@
   position: relative;
   top: -1.85rem;
   width: min(40%, 430px);
+  @include global.mq('sp') {
+    width: max(100%, 300px);
+    padding-right: 0;
+  }
 }
