--- a/開発用/src/assets/sass/project/_p-room__title.scss
+++ b/開発用/src/assets/sass/project/_p-room__title.scss
@@ -6,4 +6,9 @@
     font-weight: 800;
     line-height: 1.3;
     margin-bottom: 10px;
+    @include global.mq('sp') {
+      @include global.font(24, 800, 24, 0.1);
+      padding-bottom: 2px;
+      margin-bottom: 8px;
+    }
 }
