--- a/開発用/public/assets/css/style.css
+++ b/開発用/public/assets/css/style.css
@@ -990,205 +990,82 @@ header {
 
 .p-spend-slide {
 	background: url(../img/spend/spend-slide-bg.png) no-repeat center center/cover;
-	display: flex;
-	flex: 1;
+	height: 100vh;
 	padding-bottom: 110px;
 	padding-top: 85px;
-	width: 900%;
+	width: 100%;
 }
 
-.p-spend-slide__wrapper {
+.p-spend-slide__container {
 	display: flex;
-	margin-left: 117px;
+	height: inherit;
+	width: 100%;
+}
+
+.p-spend-slide__list {
+	display: flex;
+}
+
+/*絶対配置で線を設定*/
+
+.border-line {
+	background: #ccc;
+	height: 0; /*はじめは高さを0に*/
+	left: 0.2em; /*線の位置*/
+	position: absolute;
+	top: 0;
+	width: 2px; /*線の太さ*/
 }
 
 .p-spend-slide__block {
-	display: flex;
 	position: relative;
-	width: 100%;
 }
 
 .p-spend-slide__block::after {
-	background: #2D2D2E;
+	background: #666;
 	border-radius: 50%;
 	content: "";
-	height: 20px;
-	left: 200px;
+	height: 10px;
+	left: 0;
 	position: absolute;
-	top: -37px;
-	transform: translateX(-50%);
-	width: 20px;
+	top: 0;
+	width: 10px;
 }
 
 .p-spend-slide__block1 {
-	margin-right: 32px;
-}
-
-.p-spend-slide__card {
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-}
-
-.p-spend-slide__card1 {
-	margin-right: 28px;
-	width: 408px;
-}
-
-.p-spend-slide__time {
-	font-size: 24px;
-	letter-spacing: 2.88px;
-	line-height: 1.2083333333;
-}
-
-.p-spend-slide__head {
-	font-size: 24px;
-	letter-spacing: 2.88px;
-	line-height: 1.2083333333;
-}
-
-.p-spend-slide__text {
-	letter-spacing: 1.95px;
-	line-height: 2.303;
-	margin-top: 20px;
-	text-align: left;
-}
-
-.p-spend-slide__block__img {
-	margin-top: auto;
-}
-
-.p-spend-slide__block__img img {
-	width: 100%;
-}
-
-.p-spend-slide__accent {
-	align-items: flex-start;
-	display: flex;
-}
-
-.p-spend-slide__accent1 img:first-of-type {
-	align-self: flex-end;
-}
-
-.p-spend-slide__accent1 img:last-of-type {
-	margin-top: 205px;
+	width: 550px;
 }
 
 .p-spend-slide__block2 {
-	margin-right: 28px;
-}
-
-.p-spend-slide__card2 {
-	margin-right: 27px;
-	width: 411px;
-}
-
-.p-spend-slide__accent2 img:first-of-type {
-	margin-top: 205px;
-}
-
-.p-spend-slide__accent2 img:last-of-type {
-	align-self: flex-end;
-	margin-left: -84px;
+	width: 550px;
 }
 
 .p-spend-slide__block3 {
-	margin-right: 54px;
-}
-
-.p-spend-slide__card3 {
-	margin-right: 33px;
-	width: 520px;
-}
-
-.p-spend-slide__accent3 img:first-of-type {
-	align-self: flex-end;
-}
-
-.p-spend-slide__accent3 img:last-of-type {
-	margin-left: -26px;
-	margin-top: 224px;
+	width: 550px;
 }
 
 .p-spend-slide__block4 {
-	margin-right: 24px;
-}
-
-.p-spend-slide__card4 {
-	margin-right: 51px;
-	width: 407px;
-}
-
-.p-spend-slide__accent4 img {
-	align-self: flex-end;
+	width: 550px;
 }
 
 .p-spend-slide__block5 {
-	margin-right: 51px;
-}
-
-.p-spend-slide__card5 {
-	margin-right: 51px;
-	width: 486px;
-}
-
-.p-spend-slide__accent5 img {
-	align-self: flex-end;
+	width: 550px;
 }
 
 .p-spend-slide__block6 {
-	margin-right: 52px;
-}
-
-.p-spend-slide__card6 {
-	margin-right: 75px;
-	width: 393px;
-}
-
-.p-spend-slide__accent6 img {
-	align-self: flex-end;
+	width: 550px;
 }
 
 .p-spend-slide__block7 {
-	margin-right: 75px;
-}
-
-.p-spend-slide__card7 {
-	margin-right: 40px;
-	width: 361px;
-}
-
-.p-spend-slide__accent7 img:first-of-type {
-	align-self: flex-end;
-}
-
-.p-spend-slide__accent7 img:last-of-type {
-	margin-left: 36px;
-	margin-top: 200px;
+	width: 550px;
 }
 
 .p-spend-slide__block8 {
-	margin-right: 36px;
+	width: 550px;
 }
 
-.p-spend-slide__card8 {
-	margin-right: 28px;
-	width: 408px;
-}
-
-.p-spend-slide__accent8 img {
-	align-self: flex-end;
-}
-
-.p-spend-slide__card8 {
-	margin-right: 28px;
-	width: 408px;
-}
-
-.p-spend-slide__card9 {
-	margin-right: 28px;
-	width: 408px;
+.p-spend-slide__block9 {
+	width: 550px;
 }
 
 .p-spend-tour {
@@ -2536,123 +2413,16 @@ dialog::backdrop {
 }
 
 .p-spend-slide {
-	align-items: center;
-	flex-direction: column;
 	padding: 85px 22px 110px 22px;
 	width: 100%;
 }
 
-.p-spend-slide__wrapper {
+.p-spend-slide__container {
 	align-items: center;
 	flex-direction: column;
 	margin-left: auto;
 	margin-right: auto;
 	row-gap: 60px;
-}
-
-.p-spend-slide__block {
-	justify-content: center;
-}
-
-.p-spend-slide__block::after {
-	display: none;
-}
-
-.p-spend-slide__block1 {
-	margin-right: 0;
-}
-
-.p-spend-slide__card1 {
-	margin-right: 0;
-	width: 100%;
-}
-
-.p-spend-slide__time {
-	font-size: 20px;
-	letter-spacing: 2.4px;
-	line-height: 1.89025;
-}
-
-.p-spend-slide__head {
-	font-size: 20px;
-	letter-spacing: 2.4px;
-	line-height: 1.89025;
-}
-
-.p-spend-slide__block__img {
-	margin-top: 20px;
-}
-
-.p-spend-slide__accent {
-	display: none;
-}
-
-.p-spend-slide__block2 {
-	margin-right: 0;
-}
-
-.p-spend-slide__card2 {
-	margin-right: 0;
-	width: 100%;
-}
-
-.p-spend-slide__block3 {
-	margin-right: 0;
-}
-
-.p-spend-slide__card3 {
-	margin-right: 0;
-	width: 100%;
-}
-
-.p-spend-slide__block4 {
-	margin-right: 0;
-}
-
-.p-spend-slide__card4 {
-	margin-right: 0;
-	width: 100%;
-}
-
-.p-spend-slide__block5 {
-	margin-right: 0;
-}
-
-.p-spend-slide__card5 {
-	margin-right: 0;
-	width: 100%;
-}
-
-.p-spend-slide__block6 {
-	margin-right: 0;
-}
-
-.p-spend-slide__card6 {
-	margin-right: 0;
-	width: 100%;
-}
-
-.p-spend-slide__block7 {
-	margin-right: 0;
-}
-
-.p-spend-slide__card7 {
-	margin-right: 0;
-	width: 100%;
-}
-
-.p-spend-slide__block8 {
-	margin-right: 0;
-}
-
-.p-spend-slide__card8 {
-	margin-right: 0;
-	width: 100%;
-}
-
-.p-spend-slide__card9 {
-	margin-right: 0;
-	width: 100%;
 }
 
 .p-spend-tour {
