--- a/開発用/src/assets/sass/project/_p-spend.scss
+++ b/開発用/src/assets/sass/project/_p-spend.scss
@@ -39,6 +39,7 @@
     display: flex;
     width: 100%;
     height: inherit;
+    margin-left: 117px;
 
     @include global.mq('sp'){
         flex-direction: column;
@@ -58,12 +59,12 @@
 /*絶対配置で線を設定*/
 .border-line {
     /*線の位置*/
-  position: absolute;
-  left:0.2em;
-  top:0;
-  width:2px;/*線の太さ*/
-  height:0;/*はじめは高さを0に*/
-  background: #ccc;
+    position: absolute;
+    left:0.2em;
+    top:0;
+    height:2px;/*線の太さ*/
+    width:0;/*はじめは高さを0に*/
+    background: #ccc;
 }
 
 
@@ -71,13 +72,13 @@
     position: relative;
     &::after{
         content:'';
-    position: absolute;
-    top:0;
-    left:0;
-    width:10px;
-    height: 10px;
-    background:#666;
-    border-radius: 50%;
+        position: absolute;
+        top:0;
+        left:0;
+        width:10px;
+        height: 10px;
+        background:#666;
+        border-radius: 50%;
     }
 }
 
