--- a/開発用/src/assets/sass/project/_p-spend.scss
+++ b/開発用/src/assets/sass/project/_p-spend.scss
@@ -40,7 +40,6 @@
     width: 100%;
     height: inherit;
     margin-left: 117px;
-
     @include global.mq('sp'){
         flex-direction: column;
         align-items: center;
@@ -56,58 +55,375 @@
 
 }
 
-/*絶対配置で線を設定*/
-.border-line {
-    /*線の位置*/
-    position: absolute;
-    left:0.2em;
-    top:0;
-    height:2px;/*線の太さ*/
-    width:0;/*はじめは高さを0に*/
-    background: #ccc;
-}
-
 
 .p-spend-slide__block{
+    height: 601px;
     position: relative;
-    &::after{
-        content:'';
-        position: absolute;
-        top:0;
-        left:0;
-        width:10px;
-        height: 10px;
-        background:#666;
-        border-radius: 50%;
+}
+
+.p-spend-slide__card{
+    text-align: center;
+    height: inherit;
+    position: relative;
+}
+
+.p-spend-slide__time {
+    margin-top: 37px;
+    font-size: 24px;
+    line-height: calc( 45 / 24 );
+    letter-spacing: 2.88px;
+}
+
+.p-spend-slide__head {
+    font-size: 24px;
+    line-height: calc( 45 / 24 );
+    letter-spacing: 2.88px;
+}
+
+.p-spend-slide__text {
+    text-align: left;
+    line-height: calc( 34.545 / 15 );
+    letter-spacing: 1.95px;
+}
+
+.p-spend-slide__block__img{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    img{
+        width: auto;
+        max-height: 272px;
     }
 }
 
 .p-spend-slide__block1{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 408px;
+        margin-right: 28px;
+    }
+    .p-spend-slide__accent{
+        display: flex;
+        align-items: flex-end;
+        height: inherit;
+        img{
+            height: auto;
+            &:nth-child(2){
+                margin-bottom: 159px;
+            }
+        }
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    }
 }
 .p-spend-slide__block2{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 411px;
+        margin-right: 27px;
+    }
+    .p-spend-slide__accent{
+        display: flex;
+        align-items: flex-end;
+        height: inherit;
+        img{
+            height: auto;
+            &:nth-child(1){
+                margin-bottom: 163px;
+            }
+            &:nth-child(2){
+                margin-left: -85px;
+            }
+        }
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    }
 }
 .p-spend-slide__block3{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 520px;
+        margin-right: 33px;
+    }
+    .p-spend-slide__accent{
+        display: flex;
+        align-items: flex-end;
+        height: inherit;
+        img{
+            height: auto;
+            &:nth-child(2){
+                margin-bottom: 145px;
+                margin-left: -26px;
+            }
+        }
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    }
 }
 .p-spend-slide__block4{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 407px;
+        margin-right: 51px;
+    }
+    .p-spend-slide__accent{
+        display: flex;
+        align-items: flex-end;
+        height: inherit;
+        img{
+            height: auto;
+        }
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    }
 }
 .p-spend-slide__block5{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 486px;
+        margin-right: 51px;
+    }
+    .p-spend-slide__accent{
+        display: flex;
+        align-items: flex-end;
+        height: inherit;
+        img{
+            height: auto;
+        }
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    }
+    
 }
 .p-spend-slide__block6{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 393px;
+        margin-right: 75px;
+    }
+    .p-spend-slide__accent{
+        display: flex;
+        align-items: flex-end;
+        height: inherit;
+        img{
+            height: auto;
+        }
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    }
 }
 .p-spend-slide__block7{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 361px;
+        margin-right: 40px;
+    }
+    .p-spend-slide__accent{
+        display: flex;
+        align-items: flex-end;
+        height: inherit;
+        img{
+            height: auto;
+        }
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    };
 }
 .p-spend-slide__block8{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 374px;
+        margin-right: 70px;
+    }
+    .p-spend-slide__accent{
+        display: flex;
+        align-items: flex-end;
+        height: inherit;
+        img{
+            height: auto;
+        }
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    }
 }
 .p-spend-slide__block9{
-    width:550px;
+    width:846px;
+    position: relative;
+    display: flex;
+    &::after{
+        content:'';
+        position: absolute;
+        top:-37px;
+        left:calc( 50% - 10px );
+        width:20px;
+        height: 20px;
+        background:#2D2D2E;
+        border-radius: 50%;
+    }
+    .p-spend-slide__card{
+        width: 453px;
+    }
+    .border-line {
+        /*線の位置*/
+        position: absolute;
+        left:calc( 50% - 10px );
+        top:-28px ;
+        height:2px;/*線の太さ*/
+        width:0;/*はじめは高さを0に*/
+        background: #2D2D2E;
+    }
 }
 
 
